--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "request": "^2.72.0"
+  },
+  "engines": {
+    "node": "~4.1.2"
   }
 }
