--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/marketingstarz/chatbot_4.git"
   },
-  "author": "",
+  "author": "Facebook",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/marketingstarz/chatbot_4/issues"
